// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service Overview -> View should render empty message, when list is empty and historical data is found 1`] = `
NodeList [
  <tr
    class="euiTableRow"
  >
    <td
      class="euiTableRowCell euiTableRowCell--isMobileFullWidth"
      colspan="6"
    >
      <div
        class="euiTableCellContent euiTableCellContent--alignCenter"
      >
        <span
          class="euiTableCellContent__text"
        >
          <div
            class="euiEmptyPrompt"
          >
            <span
              class="euiTextColor euiTextColor--subdued"
            >
              <div
                class="euiTitle euiTitle--small"
              >
                No services found
              </div>
              <div
                class="euiSpacer euiSpacer--m"
              />
            </span>
          </div>
        </span>
      </div>
    </td>
  </tr>,
]
`;

exports[`Service Overview -> View should render getting started message, when list is empty and no historical data is found 1`] = `
NodeList [
  <tr
    class="euiTableRow"
  >
    <td
      class="euiTableRowCell euiTableRowCell--isMobileFullWidth"
      colspan="6"
    >
      <div
        class="euiTableCellContent euiTableCellContent--alignCenter"
      >
        <span
          class="euiTableCellContent__text"
        >
          <div
            class="euiEmptyPrompt"
          >
            <span
              class="euiTextColor euiTextColor--subdued"
            >
              <div
                class="euiTitle euiTitle--small"
              >
                Looks like you don't have any APM services installed. Let's add some!
              </div>
              <div
                class="euiSpacer euiSpacer--m"
              />
              <div
                class="euiText euiText--medium"
              >
                <p>
                  Upgrading from a pre-7.x version? Make sure you've also upgraded
              your APM Server instance(s) to at least 7.0.
                </p>
                <p>
                  You may also have old data that needs to be migrated.
                   
                  <a
                    class="euiLink euiLink--primary"
                    href="/basepath/app/kibana#/management/stack/upgrade_assistant"
                    rel="noreferrer"
                  >
                    Learn more by visiting the Kibana Upgrade Assistant
                  </a>
                  .
                </p>
              </div>
            </span>
            <div
              class="euiSpacer euiSpacer--l"
            />
            <div
              class="euiSpacer euiSpacer--s"
            />
            <a
              class="euiLink euiLink--primary"
              href="/basepath/app/home#/tutorial/apm"
              rel="noreferrer"
            >
              <button
                class="euiButton euiButton--primary euiButton--small euiButton--fill"
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <div
                    class="euiButtonContent__icon"
                    data-euiicon-type="help"
                  />
                  <span
                    class="euiButton__text"
                  >
                    Setup instructions
                  </span>
                </span>
              </button>
            </a>
          </div>
        </span>
      </div>
    </td>
  </tr>,
]
`;

exports[`Service Overview -> View should render services, when list is not empty 1`] = `
NodeList [
  .c0 {
  font-size: 16px;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<tr
    class="euiTableRow"
  >
    <td
      class="euiTableRowCell"
      style="width: 40%;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Name
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <span
          class="euiToolTipAnchor"
        >
          <a
            class="euiLink euiLink--primary c0"
            href="/basepath/app/apm/services/My Go Service/transactions"
            rel="noreferrer"
          >
            My Go Service
          </a>
        </span>
      </div>
    </td>
    <td
      class="euiTableRowCell"
      style="width: 20%;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Environment
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      />
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Agent
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        go
      </div>
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Avg. response time
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
      >
        0.6 ms
      </div>
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Trans. per minute
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
      >
        400.0 tpm
      </div>
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Errors per minute
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
      >
        500.0 err.
      </div>
    </td>
  </tr>,
  .c0 {
  font-size: 16px;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<tr
    class="euiTableRow"
  >
    <td
      class="euiTableRowCell"
      style="width: 40%;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Name
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <span
          class="euiToolTipAnchor"
        >
          <a
            class="euiLink euiLink--primary c0"
            href="/basepath/app/apm/services/My Python Service/transactions"
            rel="noreferrer"
          >
            My Python Service
          </a>
        </span>
      </div>
    </td>
    <td
      class="euiTableRowCell"
      style="width: 20%;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Environment
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <span
          class="euiBadge euiBadge--hollow euiBadge--iconLeft"
          title="test"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              test
            </span>
          </span>
        </span>
        <span
          class="euiBadge euiBadge--hollow euiBadge--iconLeft"
          title="dev"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              dev
            </span>
          </span>
        </span>
      </div>
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Agent
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        python
      </div>
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Avg. response time
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
      >
        0.3 ms
      </div>
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Trans. per minute
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
      >
        100.0 tpm
      </div>
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Errors per minute
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
      >
        200.0 err.
      </div>
    </td>
  </tr>,
]
`;
